--- a/project.html
+++ b/project.html
@@ -79,7 +79,7 @@
       </div>
 
       <!-- services -->
-      <div class="services">
+      <div class="services pb-5">
         <div class="services-header">
           <p>WHAT WE DO</p>
           <h1>Our Services</h1>
@@ -113,6 +113,52 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deserunt, magnam.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- our invention -->
+
+      <div class="invention mt white">
+        <div class="invention-header">
+          <p class="mt-5 bold">OUR INVENTION</p>
+          <h1 class="mt-5">Our Invention Is Always</h1>
+          <h1 class="mt-5">The Best</h1>
+          <p class="mt-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            inventore est doloremque. Omnis voluptatibus suscipit vitae maiores.
+            Animi, voluptas. Obcaecati sit deserunt possimus suscipit iste
+            perferendis officiis doloribus adipisci tenetur dicta excepturi
+            deleniti, totam corporis, vel temporibus veritatis soluta numquam!
+          </p>
+        </div>
+
+        <button class="about-btn btn2">Read More</button>
+        <div class="invention-features">
+          <div class="invention-about">
+            <div class="invention-logo">
+              <i class="fa fa-tools"></i>
+            </div>
+            <div class="invention-texts">
+              <h1>Breeder Management</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
+                odio eos cum esse! Atque, officiis!
+              </p>
+            </div>
+          </div>
+          <div class="invention-two">
+            <div class="invention-about">
+              <div class="invention-logo">
+                <i class="fas fa-plus-square"></i>
+              </div>
+              <div class="invention-texts">
+                <h1>Residue Treatment</h1>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
+                  odio eos cum esse! Atque, officiis!
+                </p>
+              </div>
             </div>
           </div>
         </div>
