--- a/project.html
+++ b/project.html
@@ -163,6 +163,54 @@
           </div>
         </div>
       </div>
+      <!-- our gallery -->
+      <div class="gallery">
+        <div class="gallery-texts mt">
+          <p class="mt">GALLERY</p>
+          <h1>Latest Gallery</h1>
+        </div>
+        <div class="gallery-pics mt">
+          <img src="./images/g1.jpg" alt="" />
+          <img src="./images/g2.jpg" alt="" />
+          <img src="./images/g3.jpg" alt="" />
+          <img src="./images/g4.jpg" alt="" />
+          <img src="./images/g5.jpg" alt="" />
+          <img src="./images/g6.jpg" alt="" />
+        </div>
+      </div>
+      <!-- footer -->
+      <div class="footer">
+        <div class="footer-texts">
+          <div class="footer-logo mt">
+            <h1>POULTRY</h1>
+            <h1 class="newcolor">FIELD</h1>
+          </div>
+          <h1>Links</h1>
+          <h1>Services</h1>
+          <h1>Feed</h1>
+        </div>
+        <div class="footer-texts-2">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic et
+            est tempore quaerat numquam quibusdam cum consequuntur id. Culpa,
+            quidem quae. Tenetur ea quisquam eius, perspiciatis voluptatibus
+            sequi at.
+          </p>
+
+          <div class="footer-icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-google"></i>
+            <i class="fab fa-instagram"></i>
+          </div>
+        </div>
+        <div class="footer-end">
+          <p>
+            © 2023 Poultry Field. All Rights Reserved | WordPress Theme by
+            W3Layouts.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
