project completed commit

--- a/project.html
+++ b/project.html
@@ -197,6 +197,9 @@
             sequi at.
           </p>
 
+          <p class="mt-5">Ph no. 9813282386</p>
+          <p class="mt-5">Email : xuluv911@gmail.com</p>
+
           <div class="footer-icons">
             <i class="fab fa-facebook"></i>
             <i class="fab fa-twitter"></i>
