--- a/project.html
+++ b/project.html
@@ -209,8 +209,7 @@
         </div>
         <div class="footer-end">
           <p>
-            © 2023 Poultry Field. All Rights Reserved | WordPress Theme by
-            W3Layouts.
+            © 2023 Poultry Field. All Rights Reserved | Project Theme by Sulav.
           </p>
         </div>
       </div>
